# NeuroPlastic-Optimizer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/cifar10/: neuroplastic.yaml
configs/mnist/: ablation_grad_only.yaml  adam.yaml  adamw.yaml  neuroplastic.yaml  sgd.yaml  smoke_synthetic.yaml
configs/text/: README.md
docs/: architecture.md  benchmarks.md  method.md
examples/: cifar10_example.py  minimal_mlp_example.py
results/: README.md
scripts/: __init__.py  _bootstrap.py  benchmark_all.py  debug_neuroplastic_mnist.py  plot_results.py  train_cifar10.py  train_mnist.py
scripts/paper_figures/: generate_cpu_paper_figures.py
src/neuroplastic_optimizer/: __init__.py  optimizer.py  plasticity.py  stabilization.py  state.py  traces.py
src/neuroplastic_optimizer/models/: __init__.py  cnn.py  mlp.py
src/neuroplastic_optimizer/training/: __init__.py  config.py  data.py  runner.py
src/neuroplastic_optimizer/utils/: io.py
tests/: test_benchmark_script.py  test_optimizer.py  test_plasticity.py  test_smoke_train.py  test_stabilization.py  test_training_config.py  test_training_runner.py
